hledger/test/errors/csvifblocknonempty.csv.rules
# no (indented) rules following if
if foo
